--- a/openshift/Gateway.yml
+++ b/openshift/Gateway.yml
@@ -7,9 +7,13 @@ spec:
     istio: ingressgateway # use istio default controller
   servers:
   - port:
-      number: 80
-      name: http
-      protocol: HTTP
+      number: 443
+      name: https-443
+      protocol: HTTPS
     hosts:
-    - "order-service.192.168.99.109.nip.io"
+    - "order-service.192.168.99.111.nip.io"
+    tls:
+      mode: SIMPLE
+      privateKey: /etc/istio/ingressgateway-certs/tls.key
+      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
 ---
