--- a/openshift/VirtualService-v1-100.yaml
+++ b/openshift/VirtualService-v1-100.yaml
@@ -4,17 +4,11 @@ metadata:
   name: order-service-gateway
 spec:
   hosts:
-  - "order-service.192.168.99.109.nip.io"
+  - "order-service.192.168.99.111.nip.io"
   gateways:
   - order-service-gateway
   http:
-  - match:
-    - uri:
-        prefix: /order-service
-    rewrite:
-      uri: /
-    route:
+  - route:
     - destination:
         host: order-service
-        port:
-          number: 8080
+        subset: version-v1
